# synthetic-network

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.minimal  Makefile  README.md  aarch64.nix  default.nix  run-in-vnc.sh  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/report0/: README.md  vethtest.pub
doc/report1/: README.md  apps.pub
doc/report2/: README.md
doc/report3/: FlowsApps.pub  README.md
doc/report4/: README.md  flowtop.pub
frontend/: README.md  frontend.js  index.js  package-lock.json  package.json  rushdummy.sh  start.js  test.js  udp_rate_sine_demo.js
frontend/client/: client.js  control.html  flow.js  style.css  ui.js
frontend/test_assets/: top_egress.profile  top_ingress.profile
rush/: Cargo.toml  README.md  vethtest.sh
rush/src/: basic_apps.rs  checksum.rs  config.rs  engine.rs  ethernet.rs  flow.rs  header.rs  ipv4.rs  lib.rs  link.rs  main.rs  memory.rs  offload.rs  packet.rs  qos.rs  rawsocket_app.rs  synthetic_network.rs  tcp.rs  udp.rs
synth-chrome/: Dockerfile
