[package]
name = "rush"
version = "0.1.0"
authors = ["Max Rottenkolber <max@mr.gy>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
once_cell = "1.3.1"
libc = "0.2"
byteorder = "1"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.6"
